packages/dyff/dyff-0.10.4.tar.gz/dyff-0.10.4/k8s/network/untrusted.yaml
# The network policy for the Report workflow. Denies e
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: untrusted
  namespace: default
spec:
  podSelector:
    matchExpressions:
      # FIXME: Should use a whitelist rather than a blacklist, e.g.:
      # - { key: "security.dyff.io/trusted", operator: DoesNotExist }
      - { key: "security.dyff.io/untrusted", operator: Exists }
  policyTypes:
    - Ingress
    - Egress
  # ingress: deny-all
  egress:
    # Next two rules are for GKE Workload Identity
    # See: https://cloud.google.com/kubernetes-engine/docs/concepts/workload-identity#metadata_server
    - to:
        # "For clusters running GKE version 1.21.0-gke.1000 and later..."
        - ipBlock:
            cidr: 169.254.169.252/32
      ports:
        - protocol: TCP
          port: 988
    - to:
        # "For clusters running GKE Dataplane V2..."
        - ipBlock:
            cidr: 169.254.169.254/32
      ports:
        - protocol: TCP
          port: 80
